test/errors/align1.input.asm

* = $801

    lda #0
!align 13
    lda #1
